<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/size_12"
    android:layout_marginTop="@dimen/size_10"
    android:layout_marginEnd="@dimen/size_12"
    android:background="@drawable/server_selection_bg"
    android:clickable="true"
    android:elevation="1dp"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground">

    <ImageView
        android:id="@+id/server_flag_image"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/default_server_text"
        android:src="@drawable/ic_server_flag_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Country Name -->
    <TextView
        android:id="@+id/tv_country_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/size_10"
        android:text="@string/country_name_text"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_ip_address"
        app:layout_constraintStart_toEndOf="@+id/server_flag_image"
        app:layout_constraintTop_toTopOf="@+id/server_flag_image" />

    <!-- IP Address -->
    <TextView
        android:id="@+id/tv_ip_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_country_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/IP_address"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_speed"
        app:layout_constraintStart_toStartOf="@+id/tv_country_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_country_name" />

    <!-- Speed -->
    <TextView
        android:id="@+id/tv_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_ip_address"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/speed_text"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/server_flag_image"
        app:layout_constraintStart_toStartOf="@+id/tv_country_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_ip_address" />

    <!-- Ping -->
    <TextView
        android:id="@+id/tv_ping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_ip_address"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/ping_text"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/server_flag_extend"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Protocol -->
    <TextView
        android:id="@+id/tv_protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/tcp_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/server_flag_extend"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/server_flag_extend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:src="@drawable/ic_arrow_right_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
